--- a/style.css
+++ b/style.css
@@ -1665,7 +1665,7 @@ p.field__text.footer__dados {
 
 .back__btn {
   background-color: #262626;
-  padding: 16px 86px;
+  padding: 16px 64px;
   margin-top: 32px;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
@@ -1674,6 +1674,8 @@ p.field__text.footer__dados {
 .btn__text--back {
   color: white;
   font-size: 27px;
+  min-width: 266px;
+  text-align: center;
 }
 
 .back__btn:hover {
@@ -1922,6 +1924,13 @@ p.field__text.footer__dados {
 
   .grid__bottom {
     left: 25%;
+  }
+  .back__btn {
+    max-width: 312px;
+  }
+  .btn__text--back {
+    font-size: 1.375rem;
+    min-width: min-content;
   }
 }
 
