--- a/style.css
+++ b/style.css
@@ -1691,6 +1691,14 @@ p.field__text.footer__dados {
   gap: 32px;
 }
 
+.text__block {
+  max-width: 350px;
+}
+
+.list__item--info-ver {
+  margin-left: 2%;
+}
+
 /* Media Queries */
 @media only screen and (max-width: 1446px) {
   .status__desktop {
