error login basic styling

--- a/style.css
+++ b/style.css
@@ -1709,6 +1709,25 @@ p.field__text.footer__dados {
   margin-left: 7%;
 }
 
+/* Error Message css */
+
+.error__container {
+  background-color: white;
+  align-items: center;
+  justify-content: center;
+}
+
+.error__message {
+  font-family: Montserrat !important;
+  font-weight: 550 !important;
+  font-size: 16px;
+  line-height: 1.2em;
+  letter-spacing: -0.04em;
+  -ms-word-wrap: break-word;
+  word-wrap: break-word;
+  color: #ef4444;
+}
+
 /* Media Queries */
 @media only screen and (max-width: 1446px) {
   .status__desktop {
