--- a/style.css
+++ b/style.css
@@ -1715,6 +1715,35 @@ p.field__text.footer__dados {
   background-color: white;
   align-items: center;
   justify-content: center;
+  padding: 16px;
+  gap: 8px;
+  animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px;
+}
+
+@keyframes shake {
+  10%,
+  90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+
+  20%,
+  80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%,
+  50%,
+  70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%,
+  60% {
+    transform: translate3d(4px, 0, 0);
+  }
 }
 
 .error__message {
@@ -1726,6 +1755,16 @@ p.field__text.footer__dados {
   -ms-word-wrap: break-word;
   word-wrap: break-word;
   color: #ef4444;
+  margin: 0;
+}
+
+.footer__login {
+  margin-top: 100px;
+  text-align: center;
+}
+
+.footer__login a:hover {
+  color: white;
 }
 
 /* Media Queries */
