--- a/style.css
+++ b/style.css
@@ -1712,7 +1712,7 @@ p.field__text.footer__dados {
 /* Error Message css */
 
 .error__container {
-  background-color: white;
+  border: 1px solid #e0c794;
   align-items: center;
   justify-content: center;
   padding: 16px;
@@ -1747,14 +1747,14 @@ p.field__text.footer__dados {
 }
 
 .error__message {
-  font-family: Montserrat !important;
-  font-weight: 550 !important;
+  font-family: "Montserrat", sans-serif !important;
+  font-weight: 500 !important;
   font-size: 16px;
   line-height: 1.2em;
   letter-spacing: -0.04em;
   -ms-word-wrap: break-word;
   word-wrap: break-word;
-  color: #ef4444;
+  color: #e0c794;
   margin: 0;
 }
 
